--- a/qiyexiaohao/c_contact_mint.html
+++ b/qiyexiaohao/c_contact_mint.html
@@ -62,7 +62,6 @@
 							var Context = plus.android.runtimeMainActivity();
 							//检测是否打开了此权限
 							var res = plus.android.invoke(Context, "checkSelfPermission", "android.permission.READ_CONTACTS");
-							console.log("res======" + JSON.stringify(res));
 							if(res != 0){
 								_.alert("请从系统设置中设置\n开启通讯录访问\n后重试", "权限不足");
 								return;
@@ -70,13 +69,12 @@
 						}
 						plus.contacts.getAddressBook(plus.contacts.ADDRESSBOOK_PHONE, function(addressbook) {
 							addressbook.find(["displayName", "phoneNumbers","organizations"], function(contacts) {
-								console.log('contacts1===' + JSON.stringify(contacts));
 								for(var i = 0, len = contacts.length; i < len; i++) {
 									contact = {};
 									contact.displayName = contacts[i].displayName;
 									contact.wordsCode = Pinyin.getWordsCode(contacts[i].displayName || '');
 									contact.ufirst = Pinyin._ucfirstName(contact.wordsCode);
-									contact.phoneNumber = contacts[i].phoneNumbers[0].value;//手机
+									contact.phoneNumber = contacts[i].phoneNumbers[0] && contacts[i].phoneNumbers[0].value;//手机
 									if(contacts[i].phoneNumbers[1]){
 										contact.tellNumber = contacts[i].phoneNumbers[1].value;//电话
 									}
@@ -102,7 +100,6 @@
 								})
 								self.contactsData = contactsDataTmp; //赋值
 								plus.nativeUI.closeWaiting(); 
-								console.log("contacts====" + JSON.stringify(self.contactsData));
 							}, function() {
 								plus.nativeUI.closeWaiting(); 
 								_.toast("获取电话簿失败 ");
@@ -126,12 +123,12 @@
 					},
 					toChoose:function(param){
 						var obj = param.obj;
-						console.log("obj====" + JSON.stringify(obj));
 						var web = plus.webview.getWebviewById('sendMsg');
 						w.setItem("displayName",obj.displayName);
-						w.setItem("displayNumber",obj.phoneNumber);
+						w.setItem("phoneNumber",obj.phoneNumber);
 						web.evalJS("addName()");
 						_.later(function(){
+							plus.webview.currentWebview().hide();
 							web.show("slide-in-right",500);
 						},500)
 					}
