--- a/qiyexiaohao/contacterDeHtml.html
+++ b/qiyexiaohao/contacterDeHtml.html
@@ -65,7 +65,7 @@
 					</li>-->
 				</ul>
 			</div>
-			<button @tap="toDel()" type="button" class="bottom_del_div mui-btn mui-btn-block">删除通话记录</button>
+			<!--<button @tap="toDel()" type="button" class="bottom_del_div mui-btn mui-btn-block">删除通话记录</button>-->
 		</div>
 	</body>
 	<script src="js/mui.min.js"></script>
