--- a/qiyexiaohao/loginOfC.html
+++ b/qiyexiaohao/loginOfC.html
@@ -44,6 +44,9 @@
 				},
 				plusReady: {
 					init: function() {
+						plus.webview.currentWebview().setStyle({
+							softinputMode: "adjustResize"
+						});
 						self = this;
 						var currentWeb = plus.webview.currentWebview();
 						account = currentWeb.account;
@@ -54,9 +57,7 @@
 				methods: {
 					getLoginCompany: function() {
 						var nonce_str = u.mathRand();
-						console.log("nonce_str====" + nonce_str);
 						var timestamp = Date.parse(new Date()).toString().substr(0, 8);
-						console.log("timestamp====" + timestamp);
 						var identifier = w.getItem("identifier"); //设备标识号
 						var pdata = {
 							app: "Member",
@@ -107,9 +108,7 @@
 					},
 					login: function() {
 						var nonce_str = u.mathRand();
-						console.log("nonce_str====" + nonce_str);
 						var timestamp = Date.parse(new Date()).toString().substr(0, 8);
-						console.log("timestamp====" + timestamp);
 						var identifier = w.getItem("identifier"); //设备标识号
 						var pdata = {
 							app: "Member",
@@ -127,7 +126,6 @@
 							if(data.status == 0) {
 								data = data.data;
 								_.toast("登录成功");
-								console.log("data===" + JSON.stringify(data));
 		 						w.setItem("user_token",data.user_token);
 								w.setItem("company_id",data.company_id);
 								w.setItem("mobile",data.mobile);
